Fixed FELIX-4677 : Web Console Configuration plugin is confusing about default values & optionality of elements https://issues.apache.org/jira/browse/FELIX-4677
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole@1640155 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/OSGI-INF/l10n/bundle.properties
+++ b/src/main/resources/OSGI-INF/l10n/bundle.properties
@@ -187,6 +187,8 @@ config.title.actions=Actions
 config.title.bundle=Bundle
 config.title.name=Name
 config.bind.error=Error: the PID "{0}" is bound to "{1}" but the actual managed service is registered from "{2}" bundle
+config.property.default.value=Note, that this property is not set. The above field contains is the *default value* specified in the Meta Type service.
+config.property.optional.value=This attribute is optional. To save it in the current configuration you must check it. To remove it from the configuration uncheck the checkbox.
 
 # License plugin
 licenses.pluginTitle=Licenses
