--- a/webconsole-plugins/useradmin/src/main/resources/OSGI-INF/l10n/bundle.properties
+++ b/webconsole-plugins/useradmin/src/main/resources/OSGI-INF/l10n/bundle.properties
@@ -39,10 +39,7 @@ role.type.1=User
 role.type.2=Group
 type.string=String
 type.bytes=Byte[]
-type.password-MD5=Password Hash (MD5)
-type.password-SHA1=Password Hash (SHA-1)
-type.password-SHA256=Password Hash (SHA256)
-type.password-SHA512=Password Hash (SHA512)
+type.password=Password Hash
 role.statline=There are {1} user(s) and {2} role(s) arranged in {0} groups.
 role.help.initial=\
 - Select a role on the left side to open it and edit it's properties and credentials<br/>\
