--- a/webconsole-plugins/useradmin/src/main/resources/OSGI-INF/l10n/bundle_bg.properties
+++ b/webconsole-plugins/useradmin/src/main/resources/OSGI-INF/l10n/bundle_bg.properties
@@ -39,10 +39,7 @@ role.type.1=Потребител
 role.type.2=Група
 type.string=Низ
 type.bytes=Данни
-type.password-MD5=Парола (MD5)
-type.password-SHA1=Парола (SHA-1)
-type.password-SHA256=Парола (SHA256)
-type.password-SHA512=Парола (SHA512)
+type.password=Парола
 role.statline=Има {1} потребител(я) и {2} роли организирани в {0} групи.
 role.help.initial=\
 - Изберете роля от ляво, за да я отворите и промените нейните атрибути<br/>\
