Fixed FELIX-4703 : User Admin plugin should use all available to the JVM crypto algorithms https://issues.apache.org/jira/browse/FELIX-4703
Meanwhile also updated :
- the apache-rat configuration
- the dependencies file, as json2.min and crypto-js were removed
- the activator, removing some dead code


git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole-plugins/useradmin@1640280 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/OSGI-INF/l10n/bundle.properties
+++ b/src/main/resources/OSGI-INF/l10n/bundle.properties
@@ -39,10 +39,7 @@ role.type.1=User
 role.type.2=Group
 type.string=String
 type.bytes=Byte[]
-type.password-MD5=Password Hash (MD5)
-type.password-SHA1=Password Hash (SHA-1)
-type.password-SHA256=Password Hash (SHA256)
-type.password-SHA512=Password Hash (SHA512)
+type.password=Password Hash
 role.statline=There are {1} user(s) and {2} role(s) arranged in {0} groups.
 role.help.initial=\
 - Select a role on the left side to open it and edit it's properties and credentials<br/>\
