Fixed FELIX-3848 : Differentiate between unbound and new configuration https://issues.apache.org/jira/browse/FELIX-3848
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole@1643105 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/OSGI-INF/l10n/bundle.properties
+++ b/src/main/resources/OSGI-INF/l10n/bundle.properties
@@ -183,6 +183,8 @@ config.factories.title=Factory Configurations
 config.configurations.title=Configurations
 config.create.tip=Create new factory configuration
 config.edit.tip=Edit the configuration values
+config.title.exists= ?\ 
+config.title.exists.tip=There is a real Configuration created. If the checkbox was missing, it would be either Managed Service or Meta-Type definition available but no configuration.
 config.title.actions=Actions
 config.title.bundle=Bundle
 config.title.name=Name
