preparation for 1.1.2 release
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole-plugins/event@1645879 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+Changes from 1.1.0 to 1.1.2
+---------------------------
+
+** Bug
+    * [FELIX-4573] - Web Console Event plugin might cease operation if Event property is null
+
+** New Feature
+    * [FELIX-4499] - BundleEventConverter reports UNINSTALLED for UNRESOLVED events
+    * [FELIX-4500] - EventListener should implement SynchronousBundleListener
+
 Changes from 1.0.2 to 1.1.0
 ---------------------------
 
