updated changelog for 1.1.2 release with some last-minute changes
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole-plugins/event@1645887 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@ Changes from 1.1.0 to 1.1.2
 
 ** Bug
     * [FELIX-4573] - Web Console Event plugin might cease operation if Event property is null
+    * [FELIX-4731] - Event plugin native2ascii plugin conflicts with Eclipse
+    * [FELIX-4732] - Web Console event plugin is not compatible with OSGi/Minimum EE
 
 ** New Feature
     * [FELIX-4499] - BundleEventConverter reports UNINSTALLED for UNRESOLVED events
