--- a/ipojo/manipulator/maven-ipojo-plugin/changelog.txt
+++ b/ipojo/manipulator/maven-ipojo-plugin/changelog.txt
@@ -1,3 +1,12 @@
+Changes from the 1.12.0 to 1.12.1
+---------------------------------
+
+** Bug
+    * [FELIX-4612] - @PostRegistration is not being called
+    * [FELIX-4620] - Warning should be removed when @Configuration is used
+    * [FELIX-4668] - Can not use @Stereotype annotated annotation from another bundle (unless its package is included or re-exported)
+    * [FELIX-4725] - Inner Class Manipulation uses the wrong 'access level'
+
 Changes from the 1.11.2 to 1.12.0
 ---------------------------------
 
