FELIX-3849 : Support setting configuration binding
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole@1649069 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/OSGI-INF/l10n/bundle.properties
+++ b/src/main/resources/OSGI-INF/l10n/bundle.properties
@@ -175,7 +175,7 @@ config.info.fpid=Factory Persistent Identifier (Factory PID)
 config.info.binding=Configuration Binding
 config.info.unbound=Unbound or new configuration 
 config.unbind.btn=Unbind
-config.unbind.tip=Unbind Configuration from Bundle
+config.unbind.tip=Unbind configuration from bundle
 config.del.ask=Are you sure to delete this configuration ?
 config.del.config=Configuration: 
 config.del.bundle=Bundle: 
