--- a/webconsole/src/main/resources/OSGI-INF/l10n/bundle.properties
+++ b/webconsole/src/main/resources/OSGI-INF/l10n/bundle.properties
@@ -175,7 +175,7 @@ config.info.fpid=Factory Persistent Identifier (Factory PID)
 config.info.binding=Configuration Binding
 config.info.unbound=Unbound or new configuration 
 config.unbind.btn=Unbind
-config.unbind.tip=Unbind Configuration from Bundle
+config.unbind.tip=Unbind configuration from bundle
 config.del.ask=Are you sure to delete this configuration ?
 config.del.config=Configuration: 
 config.del.bundle=Bundle: 
