Updated README files. Print SHA1 checksum instead of SHA512, when signing staging archives. Don't generate html rat report, and ignore rat-report.xml when running 'rat' task.
git-svn-id: https://svn.apache.org/repos/asf/felix/sandbox/pderop/dependencymanager@1649464 13f79535-47bb-0310-9956-ffa450edef68

--- a/README
+++ b/README
@@ -3,7 +3,8 @@ Dependency Manager 4.0.0 general README
 * misc documentations:
 
 - org.apache.felix.dependencymanager/design.txt
-- doc/A_Glance_At_DependencyManager.odp gives a quick overview of Dependency Manager, including new features.
+- doc/A_Glance_At_DependencyManager.odp gives a quick overview of Dependency Manager, including new features
+- release/REAME: Release Guide
 
 * to compile and run tests under eclipse/bndtools
 
