Prepare for release
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/main@1650996 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,3 +1,8 @@
+Changes from 4.4.1 to 4.6.0
+---------------------------
+** Improvement
+    * Update to latest framework version 4.6.0
+
 Changes from 4.4.0 to 4.4.1
 ---------------------------
 ** Improvement
