--- a/main.distribution/doc/changelog.txt
+++ b/main.distribution/doc/changelog.txt
@@ -1,3 +1,8 @@
+Changes from 4.4.1 to 4.6.0
+---------------------------
+** Improvement
+    * Update to framework and main 4.6.0
+
 Changes from 4.4.0 to 4.4.1
 ---------------------------
 ** Improvement
