--- a/webconsole-plugins/useradmin/src/main/resources/OSGI-INF/l10n/bundle.properties
+++ b/webconsole-plugins/useradmin/src/main/resources/OSGI-INF/l10n/bundle.properties
@@ -47,5 +47,5 @@ role.help.initial=\
 - While dragging, hold Ctrl button to copy, instead of move<br/>\
 - To remove a role from a group - drag it to the root node<br/>\
 - The roles which are in <i>italic</i> are 'required' members of the current group<br/>\
-- To toggle a role from required to basic membership (and vice-versa), double click on it
-
+- To change the membership, select the role and use 'Toggle Membership' button.
+toggleRequired=Toggle Membership
