--- a/release/resources/deps/README
+++ b/release/resources/deps/README
@@ -23,7 +23,7 @@ register, acquire, and manage dynamic OSGi services.
 
 This archive contains all the binary dependencies that are needed to build
 Apache Felix Dependency Manager. 
-To build the source, you have to copy the ./cnf directory into the apache-felix-dependencymanager-X.Y.Z/ directory:
+To build the source, you have to copy the ./cnf directory into the apache-felix-dependencymanager-X.Y.Z-src directory:
 
 $ cp -r ./cnf ../apache-felix-dependencymanager-X.Y.Z-src/
 
