Changed the path of the build.gradle script as it is in the release folder.
git-svn-id: https://svn.apache.org/repos/asf/felix/sandbox/pderop/dependencymanager@1652278 13f79535-47bb-0310-9956-ffa450edef68

--- a/release/README
+++ b/release/README
@@ -38,7 +38,7 @@ $ ./gradlew jar
 $ ./gradlew test
 $ ./gradlew check
 
-Then Edit the ./build.gradle script, and modify the "dmVersion", and create the staging:
+Then Edit the ./release/build.gradle script, and modify the "dmVersion", and create the staging:
 
 $ ./gradlew makeStaging (this will create ./release/staging/ directory)
 
