Fixed FELIX-4767 : Bulgarian i18n for Web Console is out of sync https://issues.apache.org/jira/browse/FELIX-4767
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1653209 13f79535-47bb-0310-9956-ffa450edef68

--- a/webconsole-l10n/bg/src/main/resources/OSGI-INF/l10n/bundle_bg.properties
+++ b/webconsole-l10n/bg/src/main/resources/OSGI-INF/l10n/bundle_bg.properties
@@ -34,6 +34,7 @@ change=Промяна
 abort=Отказ
 back=Назад
 id=Id
+ranking=Ранг
 type=Тип
 type_s=Тип(ове)
 bundle=Бъндъл
@@ -102,6 +103,7 @@ log.traces=Изглед изключения:
 log.traces.full=Пълен
 log.traces.min=Само съобщение
 
+
 # Bundles plugin
 bundles.pluginTitle=Бъндъли
 bundles.statline.prefix=Информация за бъндълите: 
@@ -111,7 +113,6 @@ bundles.statline.active={0} активни
 bundles.statline.fragments={0} активни фрагменти
 bundles.statline.resolved={0} resolved
 bundles.statline.installed={0} инсталирани
-bundles.statline=Информация за бъндълите: {0} бъндъли общо, {1} активни, {2} активни фрагменти, {3} resolved, {4} инсталирани.
 bundles.install_or_update=Инсталиране/обновяване
 bundles.install_update=Инсталиране/обновяване...
 bundles.refreshPkg=Обновяване пакети
@@ -120,7 +121,6 @@ bundles.name.symb=Символно име
 bundles.category=Категория
 bundles.status=Статус
 bundles.actions=Действия
-
 # bundle details
 bundles.location=Bundle Location
 bundles.lastMod=Последна промяна
@@ -162,6 +162,7 @@ bundles.state.fragment=Фрагмент
 # action error
 bundles.error.title=Грешка при изпълнение на операцията!
 
+
 # Configuration plugin
 configMgr.pluginTitle=Конфигурации
 config.status.ok=Configuration Admin Service е достъпен.
@@ -183,10 +184,14 @@ config.factories.title=Factory Конфигурации
 config.configurations.title=Конфигурации
 config.create.tip=Създаване на нова factory конфигурация
 config.edit.tip=Редактиране на стойностите на конфигурацията
+config.title.exists= ?\ 
+config.title.exists.tip=Конфигурацията съществува. Ако няма отметка, тогава няма реална конфигурация а само ManagedService регистрация или Meta-Type дефиниция. 
 config.title.actions=Действия
 config.title.bundle=Бъндъл
 config.title.name=Име
 config.bind.error=Грешка: PID "{0}" е асоцииран с "{1}" но улугата е регистриране от бъндъл "{2}"
+config.property.default.value=Внимание. Горната стойност реално не е зададена. Тя е стойност по подразбиране.
+config.property.optional.value=Този атрибут не е задължителен. За да го зададете в текущата конфигурация, моля отбележете квадратчето. Ако искате да го изтриете от текущата конфигурация - махнете белязката.
 
 # License plugin
 licenses.pluginTitle=Лицензи
@@ -245,7 +250,7 @@ metadata.password.description=Паролата която се изисква о
 metadata.category.name=Категория по подразбиране
 metadata.category.description=Категорията (име на меню), която се ползва по подразбиране когато плъгин е регистриран без\
  пропъртито felix.webconsole.category или без да имплементира AbstractWebConsole.getCategory() метода. Ако не укажете\
- стойност, се ползва "Main".  
+ стойност, се ползва "Main".
 
 metadata.plugins.name=Добавки
 metadata.plugins.description=Изберете активните добавки
