--- a/release/README
+++ b/release/README
@@ -9,7 +9,7 @@ To create a release you must:
 * Have Subversion installed on your system;
 * Have gpg installed on your system;
 * Have a public key added to the keys file, and committed to [2] 
-* If necessary, configure your https proxy settings:
+* If you are using an http proxy, configure the following:
 
   export GRADLE_OPTS="-Dhttps.proxyHost=www.somehost.org -Dhttps.proxyPort=8080"
 
@@ -81,3 +81,4 @@ Cancelling the release
 $ ./gradlew deleteFromStaging -PsvnUser=youSvnUser -PsvnPassword=yourSvnPassword
 
 [1] http://www.apache.org/dev/release.html
+[2] http://www.apache.org/dist/felix/KEYS
